[project]
name = "Convo-LLM-Voice-Agent-Bootstrap"
version = "0.1.0"
description = "Voice-first conversational LLM template for digital artists"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "GPL-3.0-or-later" }
dependencies = [
	"numpy>=1.26.0",
	"openai-whisper>=20240930",
	"piper-tts>=1.3.0",
	"pyfxr>=0.3.0",
	"pyserial>=3.5",
	"requests>=2.32.0",
	"sounddevice>=0.5.0",
	"soundfile>=0.12.1",
]
